[package]
name = "gen_ops"
version = "0.1.0"
edition = "2021"
description = "Macros for operator overloading for generic types"
authors = ["K Vinayak <kvinayakklly4@gmail.com>"]
license = "MIT"
keywords = ["operator", "overloading", "macro", "impl", "op"]
categories = ["rust-patterns", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
